--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,24 @@
     </div>
   </nav>
 
+ <!-- Main Section -->
+ <div class="container text-primary">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <!-- Timer Section -->
+        <section id="timer-block" class="card mt-5 bg-primary text-center">
+          <div class="card-body">
+            <h1 id="timer">25 : 00</h1>
+            <div class="buttons">
+              <button type="button" id="btnStart" class="btn btn-success btn-lg m-3 timerBtn">Start</button>
+              <button type="button" id="btnStop" class="btn btn-danger btn-lg m-3 timerBtn">Stop</button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
