Added todo block

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,14 @@
         </section>
       </div>
     </div>
+    
+    <!-- TODO Block Section -->
+    <section id="todo-block" class="card bg-primary mt-5">
+      <div class="card-header text-center">TODO (1h 15min)</div>
+      <div class="card-body p-5">
+        
+      </div>
+    </section>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
