Added table in todo block

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,41 @@
             <button type="submit" class="btn btn-success w-100">Add new</button>
           </div>
         </form>
+
+        <!-- TODO Table -->
+        <table class="table table-hover table-borderless mt-5" id="todoTable">
+          <thead>
+            <tr class="border-bottom-1">
+              <th scope="col" style="width: 15%">Category</th>
+              <th scope="col" style="width: 60%">Description</th>
+              <th scope="col" style="width: 25%"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Work</td>
+              <td>Create design like voscreen.com</td>
+              <td class="d-flex justify-content-end align-items-center">
+                <i class="far fa-star mr-3"></i>
+                <i class="fas fa-check mr-3 text-success"></i>
+                <i class="fas fa-minus mr-3 text-danger"></i>
+                <i class="fas fa-edit mr-4 text-dark"></i>
+                <span>04:30 PM</span>
+              </td>
+            </tr>
+            <tr>
+              <td>Work</td>
+              <td>Create design like voscreen.com</td>
+              <td class="d-flex justify-content-end align-items-center">
+                <i class="far fa-star mr-3"></i>
+                <i class="fas fa-check mr-3 text-success"></i>
+                <i class="fas fa-minus mr-3 text-danger"></i>
+                <i class="fas fa-edit mr-4 text-dark"></i>
+                <span>04:30 PM</span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
   </div>
