--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   </nav>
 
  <!-- Main Section -->
- <div class="container text-primary">
+  <div class="container text-primary">
     <div class="row justify-content-center">
       <div class="col-6">
         <!-- Timer Section -->
@@ -92,6 +92,13 @@
       </div>
     </section>
   </div>
+
+  <!-- Footer -->
+  <footer class="bg-primary p-2 mt-5 text-primary">
+    <div class="container text-center">
+      &copy; Zootopia Studios
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
