Made more accurate timer

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
         <!-- Timer Section -->
         <section id="timer-block" class="card mt-5 bg-primary text-center">
           <div class="card-body">
-            <h1 id="timer">25 : 00</h1>
+            <h1 id="timer"></h1>
             <div class="buttons">
               <button type="button" id="btnStart" class="btn btn-success btn-lg m-3 timerBtn">Start</button>
               <button type="button" id="btnStop" class="btn btn-danger btn-lg m-3 timerBtn">Stop</button>
