--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="css/customize.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Pomodoro</title>
 </head>
 <body class="bg-secondary">
@@ -83,7 +84,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="bg-primary p-2 mt-5 text-primary">
+  <footer class="bg-primary text-primary">
     <div class="container text-center">
       &copy; Zootopia Studios
     </div>
