Added alerts block

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
     </div>
   </nav>
 
+  <!-- Alerts block -->
+  <div id="alerts"></div>
+
  <!-- Main Section -->
   <div class="container text-primary">
     <div class="row justify-content-center">
