--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,11 @@
               <td>Personal</td>
               <td>Do something</td>
               <td class="d-flex justify-content-end align-items-center">
-                <i class="far fa-star mr-3"></i>
-                <i class="fas fa-check mr-3 text-success"></i>
-                <i class="fas fa-minus mr-3 text-danger"></i>
-                <i class="fas fa-edit mr-4 text-dark"></i>
+                <i class="far fa-star"></i>
+                <i class="fas fa-check text-success"></i>
+                <i class="fas fa-trash-alt text-danger"></i>
                 <span>04:30 PM</span>
+                <i class="fas fa-edit ml-3 text-dark"></i>
               </td>
             </tr>
           </tbody>
