--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,23 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <title>Pomodoro</title>
 </head>
 <body class="bg-secondary">
   <!-- Navbar Section -->
   <nav class="navbar bg-primary p-3">
     <div class="container">
-      <a href="#" class="navbar-brand text-primary">Pomodoro Helper</a>
+      <a href="#" class="navbar-brand text-light">Pomodoro Helper</a>
     </div>
   </nav>
 
   <!-- Alerts block -->
   <div id="alerts"></div>
 
- <!-- Main Section -->
-  <div class="container text-primary">
+  <!-- Main Section -->
+  <div class="container text-light">
     <div class="row justify-content-center">
       <div class="col-6">
         <!-- Timer Section -->
@@ -85,14 +83,10 @@
   </div>
 
   <!-- Footer -->
-  <footer class="bg-primary text-primary">
+  <footer class="bg-primary text-light">
     <div class="container text-center">
       &copy; Zootopia Studios
     </div>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
