--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,6 +11,11 @@
   <nav class="navbar bg-primary p-3">
     <div class="container">
       <a href="#" class="navbar-brand text-light">Pomodoro Helper</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link text-light" data-toggle="modal" data-target="#loginModal">Sign in</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -154,6 +159,36 @@
         <div class="modal-footer border-top-1 border-secondary">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" id="settingsModalSaveBtn" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Login Modal -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content bg-primary text-light">
+        <div class="modal-header bg-secondary border-0">
+          <h5 class="modal-title" id="loginModalLabel">Authorization</h5>
+          <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="inputEmail">Email address</label>
+              <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Password</label>
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            <hr class="border-secondary">
+            <a href="#" class="btn text-light">Create account</a>
+            <button type="submit" class="btn btn-secondary float-right w-50">Sign in</button>
+          </form>
         </div>
       </div>
     </div>
