Link timer with tasks

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -44,7 +44,7 @@
     
     <!-- TODO Block Section -->
     <section id="todo-block" class="card bg-primary mt-5">
-      <div class="card-header text-center">TODO (1h 15min)</div>
+      <div class="card-header text-center">TODO</div>
       <div class="card-body p-5">
         <!-- Form -->
         <form id="form" class="form-row">
@@ -64,7 +64,7 @@
         </form>
 
         <!-- TODO Table -->
-        <table class="table table-hover table-borderless mt-5" id="todoTable">
+        <table class="table table-hover table-borderless mt-5 d-none" id="todoTable">
           <thead>
             <tr class="border-bottom-1">
               <th scope="col" style="width: 15%">Category</th>
@@ -72,19 +72,7 @@
               <th scope="col" style="width: 25%"></th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>Personal</td>
-              <td>Do something</td>
-              <td class="d-flex justify-content-end align-items-center">
-                <i class="far fa-star"></i>
-                <i class="fas fa-check text-success"></i>
-                <i class="fas fa-trash-alt text-danger"></i>
-                <span>04:30 PM</span>
-                <i class="fas fa-edit ml-3 text-dark"></i>
-              </td>
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
     </section>
