Disable stop button

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -35,7 +35,7 @@
             <h1 id="timer"></h1>
             <div class="buttons">
               <button type="button" id="btnStart" class="btn btn-success btn-lg m-3 timerBtn">Start</button>
-              <button type="button" id="btnStop" class="btn btn-danger btn-lg m-3 timerBtn">Stop</button>
+              <button type="button" id="btnStop" class="btn btn-danger btn-lg m-3 timerBtn" disabled>Stop</button>
             </div>
           </div>
         </section>
