--- a/app/src/index.html
+++ b/app/src/index.html
@@ -112,16 +112,16 @@
               <div class="form-group row">
                 <label for="pomodoroDuration" class="col-5 col-form-label">Pomodoro duration</label>
                 <div class="col-7">
-                  <input type="number" class="form-control" id="pomodoroDuration" value="25">
+                  <input type="number" min="1" max="59" class="form-control" id="pomodoroDuration">
                 </div>
               </div>
-              <div class="form-group row">
+              <div class="form-group row d-none">
                 <label for="shortBreakDuration" class="col-5 col-form-label">Short break duration</label>
                 <div class="col-7">
                   <input type="number" class="form-control" id="shortBreakDuration" value="5">
                 </div>
               </div>
-              <div class="form-group row">
+              <div class="form-group row d-none">
                 <label for="longBreakDuration" class="col-5 col-form-label">Long break duration</label>
                 <div class="col-7">
                   <input type="number" class="form-control" id="longBreakDuration" value="15">
@@ -134,10 +134,10 @@
                 <div class="col-7">
                   <select class="custom-select" id="volumeValue">
                     <option value="0">0%</option>
-                    <option value="25">25%</option>
-                    <option value="50" selected>50%</option>
-                    <option value="75">75%</option>
-                    <option value="100">100%</option>
+                    <option value="0.25">25%</option>
+                    <option value="0.5">50%</option>
+                    <option value="0.75">75%</option>
+                    <option value="1">100%</option>
                   </select>
                 </div>
               </div>
