--- a/app/src/index.html
+++ b/app/src/index.html
@@ -115,16 +115,16 @@
                   <input type="number" min="1" max="59" class="form-control" id="pomodoroDuration">
                 </div>
               </div>
-              <div class="form-group row d-none">
+              <div class="form-group row">
                 <label for="shortBreakDuration" class="col-5 col-form-label">Short break duration</label>
                 <div class="col-7">
-                  <input type="number" class="form-control" id="shortBreakDuration" value="5">
+                  <input type="number" min="1" max="59" class="form-control" id="shortBreakDuration">
                 </div>
               </div>
-              <div class="form-group row d-none">
+              <div class="form-group row">
                 <label for="longBreakDuration" class="col-5 col-form-label">Long break duration</label>
                 <div class="col-7">
-                  <input type="number" class="form-control" id="longBreakDuration" value="15">
+                  <input type="number" class="form-control" id="longBreakDuration">
                 </div>
               </div>
             </div>
